# nes_emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
doc/: NESDoc.pdf:Zone.Identifier  cpu.md  design.md  nes_emulator.md  ppu.md  ppu_bak.md
include/nes/: callable.h  cartridge.h  cpu.h  instruction.h  io_register.h  logging.h  macros.h  main_bus.h  marco.h  mmaper.h  picture_bus.h  ppu.h  screen.h  type.h
src/: cartridge-test.cc  cartridge.cc  cpu.cc  instruction.cc  logging.cc  main.cc  mmapper.cc  ppu.cc  sfml-test.cc  sfml_screen.cc
